@@ -356,6 +356,8 @@ release.
 
 }}}
 {{{ Miscellaneous
+- Global options now use properties to display options tree
+  (Matthieu Casanova)
 
 - Update Java installer generated *nix launcher to be the same as the one in
   the native *nix packages (Björn "Vampire" Kautler)
